--- a/search.html
+++ b/search.html
@@ -4,61 +4,32 @@
   <meta charset="UTF-8" />
   <title>Search Town</title>
   <style>
-    html, body { height: 100vh; margin: 0; }
-    #container { display: flex; flex-direction: column; height: 100%; }
+    html, body { height:100vh; margin:0; font-family:'Roboto',sans-serif; display:flex; flex-direction:column; }
     .search-panel {
-      height: 60px;
-      background: #f4f4f4;
-      padding: 0 20px;
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      z-index: 10;
+      height:60px; background:#f4f4f4; display:flex; align-items:center;
+      padding:0 20px; gap:10px; box-shadow:0 2px 4px rgba(0,0,0,0.1); z-index:10;
     }
-    .search-panel input {
-      flex: 1;
-      padding: 8px;
-      font-size: 16px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
+    .search-panel input { flex:1; padding:8px; font-size:16px; border:1px solid #ccc; border-radius:4px; }
     .search-panel button {
-      padding: 8px 16px;
-      font-size: 16px;
-      font-weight: bold;
-      background-color: #005e95;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
+      padding:8px 16px; font-size:16px; font-weight:700;
+      background:#005e95; color:#fff; border:none; border-radius:4px; cursor:pointer;
     }
-    .search-panel button:hover {
-      background-color: #003f63;
-    }
-    iframe {
-      flex: 1;
-      border: none;
-      width: 100%;
-    }
+    .search-panel button:hover { background:#003f63; }
+    iframe { flex:1; width:100%; border:none; }
   </style>
 </head>
 <body>
-  <div id="container">
-    <!-- Search + Clear UI -->
-    <div class="search-panel">
-      <input id="townSearch" placeholder="Enter Town Name" />
-      <button id="doSearch">Search</button>
-      <button id="doClear">Clear</button>
-    </div>
 
-    <!-- Map iframe -->
-    <iframe
-      id="mapFrame"
-      src="https://20ahoes.github.io/MBTAFindYourCommunity/map_with_button.html?force=1"
-      title="Map View"
-    ></iframe>
+  <div class="search-panel">
+    <input id="townSearch" placeholder="Enter Town Name" />
+    <button id="doSearch">Search</button>
+    <button id="doClear">Clear</button>
   </div>
+
+  <!-- Note the ?v=3 to bust any caching -->
+  <iframe id="mapFrame"
+          src="map_with_button.html?v=3"
+          title="Map"></iframe>
 
   <script>
     const mapFrame = document.getElementById('mapFrame');
@@ -66,13 +37,13 @@
     document.getElementById('doSearch').addEventListener('click', () => {
       const name = document.getElementById('townSearch').value.trim();
       if (!name) return;
-      mapFrame.contentWindow.postMessage({ type: 'search-town', name }, '*');
-      console.log("🔎 Sent search-town:", name);
+      console.log('🛰️ sending search-town:', name);
+      mapFrame.contentWindow.postMessage({ type:'search-town', name }, '*');
     });
 
     document.getElementById('doClear').addEventListener('click', () => {
-      mapFrame.contentWindow.postMessage({ type: 'clear-town' }, '*');
-      console.log("🧹 Sent clear-town");
+      console.log('🛰️ sending clear-town');
+      mapFrame.contentWindow.postMessage({ type:'clear-town' }, '*');
     });
   </script>
 </body>
