--- a/map_with_button.html
+++ b/map_with_button.html
@@ -2,179 +2,34 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Map with Fade‑Others & Clear to Home</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-  <!-- Roboto & Icons -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-
-  <!-- Mapbox GL JS -->
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet"/>
-
-  <style>
-    body, html { margin:0; padding:0; height:100%; font-family:'Roboto',sans-serif; }
-    #map { position:absolute; top:0; bottom:0; width:100%; }
-    .top-bar {
-      position:absolute; top:0; left:0; width:100%; height:60px;
-      display:flex; justify-content:center; align-items:center;
-      background:linear-gradient(to bottom,rgba(0,0,0,0.5),rgba(0,0,0,0));
-      pointer-events:none; z-index:1;
-    }
-    #toggleMapboxLayer, #homeButton {
-      pointer-events:auto; padding:10px 20px; font-size:16px; font-weight:700;
-      background:rgba(255,255,255,0.9); color:#005e95; border:none; border-radius:8px;
-      cursor:pointer; box-shadow:0 2px 6px rgba(0,0,0,0.3); backdrop-filter:blur(4px);
-    }
-    #toggleMapboxLayer { margin:0 5px; }
-    #homeButton { position:absolute; top:10px; left:10px; z-index:2; }
-    .material-icons { font-size:24px; }
-  </style>
+  <title>Map with Fade & Notify</title>
+  <!-- [styles & Mapbox includes same as before] -->
 </head>
 <body>
-
-  <button id="homeButton" title="Clear & Home">
-    <span class="material-icons">home</span>
-  </button>
-  <div class="top-bar">
-    <button id="toggleMapboxLayer">Toggle Municipalities Layer</button>
-  </div>
-  <div id="map"></div>
+  <!-- [buttons and #map container as before] -->
 
   <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiMjBhaG9lcyIsImEiOiJjbWFwazQxbDgwaXMzMmxwbzJmNmhidm0yIn0.NileAvzC_m2asZI3tLIqUw';
-
-    // CONFIG
-    const defaultCenter    = [-71.245, 42.254],
-          defaultZoom      = 8,
-          vectorLayerId    = 'municipalitiesbycommunitytype-c8ks3h copy',
-          tileNameField    = 'Municipali',
-          geojsonNameField = 'Municipality',
-          bounds           = [[-72.5,41.5],[-69.5,43.0]],
-          geojsonURL       = './MunicipalitiesByCommunityType.geojson';
-
-    let municipalitiesData = [];
-
-    // INIT MAP
-    const map = new mapboxgl.Map({
-      container:'map',
-      style:'mapbox://styles/20ahoes/cmb6rnzqp00rs01sddsqq9xtx',
-      center:defaultCenter,
-      zoom:defaultZoom,
-      minZoom:defaultZoom,
-      maxZoom:22,
-      maxBounds:bounds
-    });
-
-    // UTILS
-    function getFeatureBounds(feature) {
-      const geom = feature.geometry;
-      const pts = geom.type==='MultiPolygon'
-        ? geom.coordinates.flat(2)
-        : geom.coordinates[0];
-      return pts.reduce(
-        (b, c) => b.extend(c),
-        new mapboxgl.LngLatBounds()
-      );
-    }
+    // [your existing init, fetch geojson, fade-layer, highlight-layer code…]
 
     function selectFeature(feature) {
-      console.log('→ selectFeature()', feature.properties[geojsonNameField]);
+      // …zoom & fade & highlight as before…
 
-      // ZOOM
-      const bb = getFeatureBounds(feature);
-      map.fitBounds(bb, { padding:40, duration:800 });
-
-      // FADE OTHERS
-      map.setFilter('fade-layer',
-        ['!=', ['get', geojsonNameField], feature.properties[geojsonNameField]]
-      );
-      map.setLayoutProperty('fade-layer','visibility','visible');
-
-      // HIGHLIGHT
-      map.getSource('highlight-town').setData({
-        type:'FeatureCollection',
-        features:[ feature ]
-      });
+      // then tell the parent which town was selected
+      window.parent.postMessage({
+        type: 'town-selected',
+        properties: feature.properties
+      }, '*');
     }
 
-    function clearSelection() {
-      console.log('→ clearSelection()');
-      map.setLayoutProperty('fade-layer','visibility','none');
-      map.getSource('highlight-town').setData({
-        type:'FeatureCollection', features:[]
-      });
-      map.flyTo({ center:defaultCenter, zoom:defaultZoom, speed:1.2, essential:true });
-    }
-
-    map.on('load', () => {
-      console.log('⏳ map.load — fetching municipalities GeoJSON…');
-      fetch(geojsonURL)
-        .then(r => {
-          console.log('   fetch status', r.status);
-          return r.json();
-        })
-        .then(data => {
-          municipalitiesData = data.features;
-          console.log('   Loaded features:', municipalitiesData.length);
-        })
-        .catch(err => console.error('❌ fetch error:', err));
-
-      // FADE LAYER
-      map.addSource('municipalities-full',{ type:'geojson', data:geojsonURL });
-      map.addLayer({
-        id:'fade-layer', type:'fill', source:'municipalities-full',
-        paint:{ 'fill-color':'#888','fill-opacity':0.5 },
-        layout:{ visibility:'none' }
-      });
-
-      // HIGHLIGHT LAYERS
-      map.addSource('highlight-town',{ type:'geojson', data:{ type:'FeatureCollection', features:[] } });
-      map.addLayer({
-        id:'highlight-fill', type:'fill', source:'highlight-town',
-        paint:{ 'fill-color':'#FFEB3B','fill-opacity':0.8 }
-      });
-      map.addLayer({
-        id:'highlight-line', type:'line', source:'highlight-town',
-        paint:{ 'line-color':'#FF9800','line-width':2 }
-      });
-
-      // TOGGLE BASE LAYER
-      document.getElementById('toggleMapboxLayer').onclick = () => {
-        const v = map.getLayoutProperty(vectorLayerId,'visibility')||'visible';
-        map.setLayoutProperty(vectorLayerId,'visibility', v==='none'?'visible':'none');
-      };
-
-      // HOME = CLEAR
-      document.getElementById('homeButton').onclick = clearSelection;
-
-      // CLICK VECTOR TILE
-      map.on('click', vectorLayerId, e => {
-        console.log('📍 click:', e.features[0].properties[tileNameField]);
-        if (!municipalitiesData.length) return;
-        const clicked = e.features[0].properties[tileNameField];
-        const match = municipalitiesData.find(
-          f => f.properties[geojsonNameField]?.toLowerCase()===clicked.toLowerCase()
-        );
-        if (match) selectFeature(match);
-      });
-    });
-
-    // MESSAGE LISTENER
     window.addEventListener('message', e => {
-      console.log('📨 message received:', e.data);
-      if (!municipalitiesData.length) return;
-      const { type, name } = e.data;
-      if (type==='search-town') {
-        console.log('   search-town →', name);
-        const match = municipalitiesData.find(
-          f => f.properties[geojsonNameField]?.toLowerCase()===name.trim().toLowerCase()
-        );
+      if (e.data?.type === 'search-town') {
+        // …find the match…
         if (match) selectFeature(match);
       }
-      else if (type==='clear-town') {
+      else if (e.data?.type === 'clear-town') {
         clearSelection();
+        // also hide info on parent
+        window.parent.postMessage({ type:'clear-town' }, '*');
       }
     });
   </script>
