--- a/search.html
+++ b/search.html
@@ -6,7 +6,8 @@
   <style>
     html, body { height:100vh; margin:0; padding:0; font-family:'Roboto',sans-serif; }
     #container { display:flex; height:100%; transition: all .5s ease; }
-    /* Info panel (hidden by default) */
+
+    /* Info panel on left, hidden by default */
     #infoPanel {
       width: 0;
       overflow: hidden;
@@ -16,7 +17,8 @@
     }
     #infoPanel.open { width: 30%; }
     #infoPanel .content { padding: 20px; }
-    /* Main (search + map) */
+
+    /* Main area (search + map) */
     #main { flex: 1; display: flex; flex-direction: column; }
     .search-panel {
       height: 60px;
@@ -46,6 +48,7 @@
       cursor: pointer;
     }
     .search-panel button:hover { background: #003f63; }
+
     /* Map iframe */
     #mapFrame {
       flex: 1;
@@ -66,11 +69,11 @@
         <h2 id="townName">Town Name</h2>
         <p><strong>Municipality:</strong> <span id="municipalityField"></span></p>
         <p><strong>Community Type:</strong> <span id="communityTypeField"></span></p>
-        <!-- Add more fields as needed -->
+        <!-- add more fields here as needed -->
       </div>
     </div>
 
-    <!-- Main content: search + map -->
+    <!-- Main (search + map) -->
     <div id="main">
       <div class="search-panel">
         <input  type="text" id="townSearch" placeholder="Enter Town Name" />
@@ -80,7 +83,7 @@
 
       <iframe
         id="mapFrame"
-        src="map_with_button.html?cachebust=1"
+        src="map_with_button.html?cachebust=2"
         title="Map View"
       ></iframe>
     </div>
@@ -99,19 +102,17 @@
 
     document.getElementById('doClear').addEventListener('click', () => {
       mapFrame.contentWindow.postMessage({ type: 'clear-town' }, '*');
-      // also hide the info panel
       container.classList.remove('info-open');
     });
 
-    // Listen for selection messages from the map iframe
+    // Listen for messages from the map iframe
     window.addEventListener('message', e => {
       const msg = e.data;
       if (msg?.type === 'town-selected') {
         const props = msg.properties;
-        document.getElementById('townName').textContent           = props.Municipality    || 'N/A';
-        document.getElementById('municipalityField').textContent = props.Municipality    || 'N/A';
-        document.getElementById('communityTypeField').textContent= props.CommunityType   || 'N/A';
-        // open the panel
+        document.getElementById('townName').textContent            = props.Municipality    || 'N/A';
+        document.getElementById('municipalityField').textContent  = props.Municipality    || 'N/A';
+        document.getElementById('communityTypeField').textContent = props.CommunityType   || 'N/A';
         container.classList.add('info-open');
       }
     });
